added second screen

--- a/brightenDay()/app/src/main/res/values/strings.xml
+++ b/brightenDay()/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">brightenDay()</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_moods">Moods</string>
+    <string name="edit_message">"Name</string>
 
 </resources>
